edits: home page almost completed

--- a/home.html
+++ b/home.html
@@ -573,38 +573,71 @@
 
           <div class="container">
             <div class="FAQ-1">
-              <div>
+              <div class="">
                 <img
                   src="/assets/images/Rectangle 29.png"
                   alt=""
-                  class="w-100"
+                  class="FAQ-5"
+                  width="685.105px"
                 />
               </div>
 
               <div class="FAQ-3">
-                <h5>Got Questions</h5>
-                <h2>Frequently Asked Questions</h2>
+                <div class="FAQ-4">
+                  <h5>Got Questions</h5>
+                  <h2>Frequently Asked Questions</h2>
+                  <img src="/assets/images/Line 2.png" alt="" />
+                </div>
 
                 <!-- accordion -->
 
                 <div class="accordion" id="faqAccordion">
-                  <!-- Item 1 -->
+                  <!-- 1 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse1"
+                        data-bs-target="#faq1"
                         aria-expanded="true"
-                        aria-controls="collapse1"
+                        aria-controls="faq1"
+                      >
+                        Do you only repair tyres, or do you handle full car
+                        servicing as well?
+                      </button>
+                    </h2>
+                    <div
+                      id="faq1"
+                      class="accordion-collapse collapse show"
+                      data-bs-parent="#faqAccordion"
+                    >
+                      <div class="accordion-body">
+                        We offer
+                        <strong>complete car servicing and repairs</strong> –
+                        not just tyres. From brakes and MOTs to full engine
+                        diagnostics, we do it all.
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- 2 -->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button
+                        class="accordion-button collapsed fw-semibold"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#faq2"
+                        aria-expanded="false"
+                        aria-controls="faq2"
                       >
                         How long does a standard service usually take?
                       </button>
                     </h2>
                     <div
-                      id="collapse1"
-                      class="accordion-collapse collapse show"
+                      id="faq2"
+                      class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
                       <div class="accordion-body">
@@ -616,49 +649,49 @@
                     </div>
                   </div>
 
-                  <!-- Item 2 -->
+                  <!-- 3 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button collapsed fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse2"
+                        data-bs-target="#faq3"
                         aria-expanded="false"
-                        aria-controls="collapse2"
+                        aria-controls="faq3"
                       >
                         Can you work on all car makes and models?
                       </button>
                     </h2>
                     <div
-                      id="collapse2"
+                      id="faq3"
                       class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
                       <div class="accordion-body">
-                        Yes! We service <strong>all makes and models</strong> —
-                        European, Japanese, American, luxury or everyday cars.
-                        No job is too big or too small.
+                        Yes, our certified mechanics are experienced with
+                        <strong>all makes and models</strong> – from compact
+                        cars to SUVs and light commercial vehicles.
                       </div>
                     </div>
                   </div>
 
-                  <!-- Item 3 -->
+                  <!-- 4 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button collapsed fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse3"
+                        data-bs-target="#faq4"
                         aria-expanded="false"
-                        aria-controls="collapse3"
+                        aria-controls="faq4"
                       >
                         Do you provide warranty on repairs?
                       </button>
                     </h2>
                     <div
-                      id="collapse3"
+                      id="faq4"
                       class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
@@ -670,22 +703,22 @@
                     </div>
                   </div>
 
-                  <!-- Item 4 -->
+                  <!-- 5 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button collapsed fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse4"
+                        data-bs-target="#faq5"
                         aria-expanded="false"
-                        aria-controls="collapse4"
+                        aria-controls="faq5"
                       >
                         Do I need to book an appointment in advance?
                       </button>
                     </h2>
                     <div
-                      id="collapse4"
+                      id="faq5"
                       class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
@@ -697,22 +730,22 @@
                     </div>
                   </div>
 
-                  <!-- Item 5 -->
+                  <!-- 6 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button collapsed fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse5"
+                        data-bs-target="#faq6"
                         aria-expanded="false"
-                        aria-controls="collapse5"
+                        aria-controls="faq6"
                       >
                         Can you help with MOT preparation or inspections?
                       </button>
                     </h2>
                     <div
-                      id="collapse5"
+                      id="faq6"
                       class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
@@ -724,22 +757,22 @@
                     </div>
                   </div>
 
-                  <!-- Item 6 -->
+                  <!-- 7 -->
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button
                         class="accordion-button collapsed fw-semibold"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapse6"
+                        data-bs-target="#faq7"
                         aria-expanded="false"
-                        aria-controls="collapse6"
+                        aria-controls="faq7"
                       >
                         Do you offer emergency tyre or breakdown assistance?
                       </button>
                     </h2>
                     <div
-                      id="collapse6"
+                      id="faq7"
                       class="accordion-collapse collapse"
                       data-bs-parent="#faqAccordion"
                     >
@@ -752,7 +785,7 @@
                   </div>
                 </div>
 
-                <div class="FAQ-2">
+                <div class="FAQ-2 py-5">
                   <div>
                     <h4>Still You Have Doubts?</h4>
                     <p>
@@ -774,35 +807,39 @@
     </main>
 
     <footer>
-      <section>
+      <section class="footer-1">
         <div class="container">
-          <div>
-            <div>
+          <div class="footer-2">
+            <div class="d-flex align-items-center">
               <img src="/assets/images/placeholder 1.png" alt="" />
-              <p>4115 Great North Road Glen Eden Auckland</p>
+              <p>4115 Great North Road <br />Glen Eden Auckland</p>
             </div>
 
-            <div>
+            <div class="d-flex align-items-center">
               <img src="/assets/images/placeholder 2.png" alt="" />
               <p>
-                Call us on : <a href="tel:+02102491900">+02102491900</a>,
+                Call us on : <br /><a href="tel:+02102491900">+02102491900</a>,
                 <a href="tel:098188814">098188814</a>
               </p>
             </div>
 
-            <div>
+            <div class="d-flex align-items-center">
               <img src="/assets/images/placeholder3.png" alt="" />
               <p>
-                Email us :
+                Email us : <br />
                 <a href="mailto:contact@example.com">contact@example.com</a>
               </p>
             </div>
           </div>
 
-          <div>
+          <div class="footer-3">
             <div>
-              <img src="/assets/images/Group 2.png" alt="" />
-              <p>
+              <img
+                src="/assets/images/logo_kelston.png"
+                alt=""
+                class="logo-footer"
+              />
+              <p style="width: 453px">
                 Lorem ipsum dolor sit amet consectetur. Fermentum orci ut semper
                 tellus. Magna libero lectus mi tortor arcu sed ridiculus.
                 Fringilla consequat amet elit ipsum. Aliquam mattis enim aliquet
@@ -810,47 +847,84 @@
               </p>
             </div>
 
-            <div>
-              <h5>useful links</h5>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Appointment</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
+            <div class="footer-4">
+              <div>
+                <h5>USEFULL LINKS</h5>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Appointment</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Testimonials</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
 
-            <div>
-              <h5>OUR SERVICES</h5>
-              <ul>
-                <li><a href="#">Preventive Maintenance</a></li>
-                <li><a href="#">General Service</a></li>
-                <li><a href="#">Performance Upgrades</a></li>
-                <li><a href="#">Transmission Services</a></li>
-                <li><a href="#">Tyre and Wheel</a></li>
-                <li><a href="#">Dentaing & Painting</a></li>
-              </ul>
-            </div>
+              <div>
+                <h5>OUR SERVICES</h5>
+                <ul>
+                  <li><a href="#">Preventive Maintenance</a></li>
+                  <li><a href="#">General Service</a></li>
+                  <li><a href="#">Performance Upgrades</a></li>
+                  <li><a href="#">Transmission Services</a></li>
+                  <li><a href="#">Tyre and Wheel</a></li>
+                  <li><a href="#">Dentaing & Painting</a></li>
+                </ul>
+              </div>
 
-            <div>
-              <h5>NEWSLETTER</h5>
-              <p>Get latest updates and offers.</p>
-              <input type="text" placeholder="Enter our email" />
-              <img src="/assets/images/enter.png" alt="" />
-              <button><img src="/assets/images/social1.png" alt="" /></button>
-              <button><img src="/assets/images/social2.png" alt="" /></button>
-              <button><img src="/assets/images/social3.png" alt="" /></button>
-              <button><img src="/assets/images/social4.png" alt="" /></button>
-            </div>
+              <div>
+                <h5>NEWSLETTER</h5>
+                <p class="footer-5">Get latest updates and offers.</p>
+                <div class="search-wrapper position-relative d-flex">
+                  <input
+                    type="text"
+                    placeholder="Enter your email"
+                    class="search-bar border-0"
+                  />
 
-            <div>
-              <p>
-                &copy; Copyright 2025 | Kelston Tyres & Car Repairs Limited. All
-                right reserved.
-              </p>
-              <button>Privacy Policy</button>
+                  <button
+                    type="submit"
+                    class="position-absolute top-50 end-0 translate-middle-y bg-transparent border-0 me-2 z-3"
+                    style="width: 50px; height: 50px"
+                  >
+                    <img
+                      src="/assets/images/enter.png"
+                      alt="Submit"
+                      style="width: 28px; height: 28px"
+                    />
+                  </button>
+                </div>
+
+                <h6 class="footer-6">follow us on -</h6>
+                <div class="social">
+                  <a href="#">
+                    <img src="/assets/images/social1.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="/assets/images/social2.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="/assets/images/social3.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="/assets/images/social4.png" alt="" />
+                  </a>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Copyright Section -->
+
+      <section class="bg-black text-white py-3">
+        <div class="container">
+          <div class="copyRight">
+            <p>
+              &copy; Copyright 2025 | Kelston Tyres & Car Repairs Limited. All
+              right reserved.
+            </p>
+            <a href="#">Privacy Policy</a>
           </div>
         </div>
       </section>
