--- a/home.html
+++ b/home.html
@@ -16,10 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <title>Document</title>
   </head>
 
@@ -489,66 +487,111 @@
       </section>
 
       <!-- Customer Testimonials -->
-      <section class="bg-test text-white">
-        <div class="container swiper">
-          <h3>Customer Testimonials</h3>
-          <img src="/assets/images/Line 2.png" alt="" />
 
-          <!-- Cards -->
+      <section class="bg-test relative overflow-hidden">
+        <!-- Background Image -->
+        <div class="absolute inset-0">
+          <img
+            src="/assets/images/your-car-background.jpg"
+            alt="background"
+            class="w-full h-full object-cover"
+          />
+          <div
+            class="absolute inset-0 bg-gradient-to-r from-black/90 via-black/70 to-transparent"
+          ></div>
+        </div>
 
-          <div class="swiper-wrapper">
-            <!-- Card-1 -->
+        <div class="container mx-auto px-6 relative z-10 py-24">
+          <h3 class="text-4xl md:text-5xl font-bold text-white mb-2">
+            Customer Testimonials
+          </h3>
+          <img src="/assets/images/Line 2.png" alt="line" class="h-1 mb-16" />
 
-            <div>
-              <img src="/assets/images/Ellipse .png" alt="" />
-              <img src="/assets/images/quote.png" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Elit mauris ante
-                tristique urna. Amet amet tortor mi id urna praesent. Nunc purus
-                adipiscing felis tellus quis eleifend. Eget duis scelerisque
-                sollicitudin sit mattis etiam.
-              </p>
-              <p>- Courtney Henry</p>
-              <p>Builder Assistant</p>
+          <!-- Slider -->
+          <div class="testimonial-wrapper">
+            <div class="testimonial-slider">
+              <!-- Slide 1 -->
+              <div class="testimonial-slide">
+                <div class="flex justify-end items-center min-h-96">
+                  <div class="max-w-2xl text-right">
+                    <div class="flex justify-end items-center gap-6 mb-6">
+                      <img
+                        src="/assets/images/Ellipse .png"
+                        alt="avatar"
+                        class="w-20 h-20 rounded-full"
+                      />
+                      <img
+                        src="/assets/images/quote.png"
+                        alt="quote"
+                        class="w-20 h-20"
+                      />
+                    </div>
+                    <p
+                      class="text-lg md:text-xl leading-relaxed text-white mb-6"
+                    >
+                      Lorem ipsum dolor sit amet consectetur. Elit mauris ante
+                      tristique urna. Amet amet tortor mi id urna praesent. Nunc
+                      purus adipiscing felis tellus quis eleifend. Eget duis
+                      scelerisque sollicitudin sit mattis etiam.
+                    </p>
+                    <p class="text-xl font-bold text-white">- COURTNEY HENRY</p>
+                    <p class="text-sm uppercase tracking-wider text-white/80">
+                      Builder Assistant
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Add more slides (copy the block above) -->
+              <div class="testimonial-slide">
+                <!-- same content, different name/text -->
+              </div>
+              <div class="testimonial-slide">...</div>
+              <div class="testimonial-slide">...</div>
+              <div class="testimonial-slide">...</div>
             </div>
 
-            <!-- Card-2 -->
-
-            <div>
-              <img src="/assets/images/Ellipse .png" alt="" />
-              <img src="/assets/images/quote.png" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Elit mauris ante
-                tristique urna. Amet amet tortor mi id urna praesent. Nunc purus
-                adipiscing felis tellus quis eleifend. Eget duis scelerisque
-                sollicitudin sit mattis etiam.
-              </p>
-              <p>- Courtney Henry</p>
-              <p>Builder Assistant</p>
+            <!-- Navigation Arrows (bottom-left like your screenshot) -->
+            <div class="flex gap-4 mt-12 justify-start">
+              <button
+                class="prev-btn w-12 h-12 rounded-full border-2 border-white/50 flex items-center justify-center hover:bg-white/20 transition"
+              >
+                <svg
+                  class="w-6 h-6 text-white"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M15 19l-7-7 7-7"
+                  />
+                </svg>
+              </button>
+              <button
+                class="next-btn w-12 h-12 rounded-full border-2 border-white/50 flex items-center justify-center hover:bg-white/20 transition"
+              >
+                <svg
+                  class="w-6 h-6 text-white"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M9 5l7 7-7 7"
+                  />
+                </svg>
+              </button>
             </div>
 
-            <!-- Card-3 -->
-
-            <div>
-              <img src="/assets/images/Ellipse .png" alt="" />
-              <img src="/assets/images/quote.png" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur. Elit mauris ante
-                tristique urna. Amet amet tortor mi id urna praesent. Nunc purus
-                adipiscing felis tellus quis eleifend. Eget duis scelerisque
-                sollicitudin sit mattis etiam.
-              </p>
-              <p>- Courtney Henry</p>
-              <p>Builder Assistant</p>
-            </div>
-
-            <!-- navigation buttons -->
-
-            <div class="swiper-button-prev">
-              <img src="/assets/images/left.svg" alt="" />
-            </div>
-            <div class="swiper-button-next">
-              <img src="/assets/images/right.svg" alt="" />
+            <!-- Dots (optional - you can remove if you don't want them) -->
+            <div class="dots flex gap-2 mt-6 justify-start">
+              <!-- JS will fill these -->
             </div>
           </div>
         </div>
@@ -929,35 +972,85 @@
         </div>
       </section>
     </footer>
-    <script type="module">
-      import Swiper from "https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.mjs";
 
-      const swiper = new Swiper(".swiper", {
-        // Optional parameters
-        direction: "vertical",
-        loop: true,
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-        // If we need pagination
-        pagination: {
-          el: ".swiper-pagination",
-        },
+    <!-- Slick -->
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 
-        // Navigation arrows
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
+    <!-- Bootstrap 5 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
-        // And if we need scrollbar
-        scrollbar: {
-          el: ".swiper-scrollbar",
-        },
+    <script>
+      const slider = document.querySelector(".testimonial-slider");
+      const slides = document.querySelectorAll(".test-slide");
+      const totalSlides = slides.length;
+      let index = 0;
+      let autoplay;
+
+      function updateSlider() {
+        slider.style.transform = `translateX(-${index * 100}%)`;
+        updateDots();
+      }
+
+      function nextSlide() {
+        index = (index + 1) % totalSlides;
+        updateSlider();
+
+        // Seamless infinite loop
+        if (index === 0) {
+          setTimeout(() => {
+            slider.style.transition = "none";
+            updateSlider();
+            setTimeout(
+              () => (slider.style.transition = "transform 0.6s ease-in-out"),
+              50
+            );
+          }, 600);
+        }
+      }
+
+      function updateDots() {
+        document.querySelectorAll(".dot").forEach((dot, i) => {
+          dot.classList.toggle("active", i === index % totalSlides);
+        });
+      }
+
+      // Create dots (one per real slide)
+      slides.forEach((_, i) => {
+        const dot = document.createElement("div");
+        dot.className = "dot";
+        if (i === 0) dot.classList.add("active");
+        dot.addEventListener("click", () => {
+          index = i;
+          updateSlider();
+        });
+        document.querySelector(".dots").appendChild(dot);
       });
+
+      // Controls
+      document.querySelector(".next-btn").addEventListener("click", nextSlide);
+      document.querySelector(".prev-btn").addEventListener("click", () => {
+        index = index <= 0 ? totalSlides - 1 : index - 1;
+        updateSlider();
+      });
+
+      // Autoplay
+      function startAutoplay() {
+        autoplay = setInterval(nextSlide, 4000); // Change speed here
+      }
+      function stopAutoplay() {
+        clearInterval(autoplay);
+      }
+
+      document
+        .querySelector(".bg-test")
+        .addEventListener("mouseenter", stopAutoplay);
+      document
+        .querySelector(".bg-test")
+        .addEventListener("mouseleave", startAutoplay);
+
+      startAutoplay();
     </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
