--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <header>
       <section>
         
-        <div class="container-fluid p-0">
+        <div class="container-fluid p-0 overflow-hidden">
           <div class="row align-items-center">
             <div class="col-md-3 head-1 bg-black text-white py-3"><h6># 1 Multibrand Car Workshop of Aukland</h6></div>
             <div class="col-md-4 col-sm-3 col-lg-5 head-2 text-white py-3"><h6>Mon - Fri 9:00AM - 5:00PM, Sat : 8:30AM - 2:30PM, Sun: Closed</h6></div>
@@ -117,7 +117,7 @@
  
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/images/bg-1.png" class="d-block w-100 banner-image-format" alt="bg-1">
+      <img src="/assets/images/bg-1.png" class="d-block w-100 " alt="bg-1">
       <div class="carousel-caption d-none d-md-block">
         <div class="banner-text">
             <p>
@@ -148,7 +148,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/images/bg-1.png" class="d-block w-100 banner-image-format" alt="bg-2">
+      <img src="/assets/images/bg-1.png" class="d-block w-100 " alt="bg-2">
       <div class="carousel-caption d-none d-md-block">
         <div class="banner-text">
             <p>
